2004-02-05  Jackson Harper <jackson@ximian.com>

	* VBCodeCompiler.cs: Set file extensions properly.
	
2003-11-27  Rafael Teixeira <rafaelteixeirabr@hotmail.com>

	* Microsoft.VisualBasic/VBCodeGenerator.cs: Support for Option Strict/Option Explicit
	
2003-11-27  Jackson Harper <jackson@ximian.com>

	* VBCodeCompiler.cs: Put a space between Property and the
	properties name. Only add a closing quote to strings if we are
	still in a quote. Use BaseType == "System.Void" to determine if a
	method is void. This prevents getting As Nothing functions. Many
	thanks to Anirban for helping me with VB Syntax.
	
2003-11-27  Jackson Harper <jackson@ximian.com>

	* VBCodeCompiler.cs: use /wlevel for warning level. This is what
	mbas uses.
	
2003-11-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* VBCodeGenerator.cs: some corrections regarding missing spaces in
	generated code (e. g. "Property "). QuoteSnippetString implemented.
	Patch by Jochen Wezel (jwezel@compumaster.de).

2003-10-17  Rafael Teixeira <rafaelteixeirabr@hotmail.com>

	* Microsoft.VisualBasic/VBCodeGenerator.cs: Sub or Function generation
	is switched by method.ReturnType being "System.Void"

2003-10-17  Rafael Teixeira <rafaelteixeirabr@hotmail.com>

	* Microsoft.VisualBasic/VBCodeCompiler.cs: Inserts "--" before file
	names block
	* Microsoft.VisualBasic/VBCodeGenerator.cs: Indexer should be
	".Item(xx)"

2003-10-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Microsoft.VisualBasic/VBCodeCompiler.cs: New.
	* Microsoft.VisualBasic/VBCodeGenerator.cs:
	* Microsoft.VisualBasic/VBCodeProvider.cs: modified others to use the
	new CodeCompiler.

	New VBCodeCompiler by Jochen Wezel <jwezel@compumaster.de>.


2003-07-07  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* VBCodeProvider.cs: Removed unneccesary attributes according to
	corecompare

2003-06-25  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* VBCodeGenerator.cs: Added and nearly completely implemented